--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -57,3 +57,11 @@ input:checked + .slider:before {
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
+
+.list-group-item {
+    border-top-width: 1px !important;
+}
+
+.select2-container {
+    margin-top: 0.6rem !important;
+}
